02. usefull-things-385-hero. UI.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
     </head>
 
     <body>
-        start
+        <nav>
+            <div class="site-name">
+                <a href="#">Logotype</a>
+            </div>
+            <div class="menu">
+                <p>Menu</p>
+            </div>
+        </nav>
+
+        <section class="hero">
+            <canvas></canvas>
+
+            <div class="hero-footer">
+                <p>Human form / Creative logic</p>
+                <p>Design 2025</p>
+            </div>
+        </section>
 
         <script type="module" src="./src/assets/js/main.js"></script>
     </body>
