--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </div>
         </section>
 
+        <script type="module" src="./src/assets/js/shaders.js"></script>
         <script type="module" src="./src/assets/js/main.js"></script>
     </body>
 </html>
