04. usefull-things-385-hero. THREE animation.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <nav>
             <div class="site-name">
-                <a href="#">Logotype</a>
+                <a href="#">Logo</a>
             </div>
             <div class="menu">
                 <p>Menu</p>
